code/style.css
body {
  font-family: "Chelsea Market", cursive;
  height: 100%;
  background-image: url(assets/1497448.jpg);
  background-size: cover;
  text-align: center;
  color: #fff;
}

main {
  width: 100%;
  max-width: 1600px;
  margin: auto;
}

header {
  height: 250px;
  margin: 0;
  display: flex;
  justify-content: center;
  align-items: center;
  font-family: "Fontdiner Swanky", cursive;
}

header h1 {
  font-size: 38px;
}

.guys {
  position: absolute;
  top: 20px;
  z-index: -1;
  width: 100%;
  display: flex;
  justify-content: space-between;
}

.guy {
  width: 50%;
  height: auto;
}

h2,
h3 {
  font-size: 22px;
}

p {
  margin: 1px;
  font-weight: 300;
  background-color: #fff;
  color: black;
}

.cards {
  margin: 20px auto 40px;
  width: 90%;
  align-items: center;
}

.cards img {
  height: 50%;
  width: auto;
  margin-top: 20px;
}

.deck {
  margin: 20px auto;
  width: 250px;
  height: 300px;
  padding-top: 30px;
  border-radius: 16px;
}

.deck:hover {
  transform: translateY(-10px);
  transition: 0.3s ease-out;
}

#killer {
  background: #000;
}

#weapon {
  background: rgb(10, 53, 10);
}

#room {
  background: midnightblue;
}

#times {
  background: rgb(12, 92, 191);
}

button {
  padding: 8px 16px;
  background: crimson;
  border: none;
  font-size: 20px;
  border-radius: 8px;
  display: block;
  margin: 0 auto 50px;
  color: #fff;
}

#mystery {
  width: 80%;
  margin: 10px auto 20px;
}

#mystery p {
  padding: 5px;
  background: #fff;
  border-radius: 10px;
  font-weight: 300;
}

#mystery img {
  display: block;
  width: 100%;
  max-width: 400px;
  margin: auto;
  animation: boing 0.5s;
  border: 5px solid rgb(52, 51, 51);
  border-radius: 10px;
}

footer p {
  padding: 20px;
  color: #fff;
  background-color: transparent;
}

/** Media Queries TABLET**/

@media (min-width: 668px) {
  header h1 {
    font-size: 50px;
  }

  h2 {
    font-size: 30px;
  }

  h3 {
    margin-top: 40px;
  }

  .guys {
    width: 80%;
    left: 10%;
  }

  .guy {
    transform: none;
    width: 40%;
  }

  .cards {
    display: flex;
    flex-wrap: wrap;
  }

  .deck {
    height: 400px;
  }

  .deck:hover {
    transform: translateY(-20px);
    transition: 0.3s ease-out;
  }

  #mystery {
    font-size: 28px;
  }
}

/** Media Queries DESKTOP**/

@media (min-width: 1025px) {
  header h1 {
    font-size: 70px;
  }
  h2 {
    font-size: 34px;
  }

  #mystery {
    margin: 40px auto;
  }
}

@keyframes boing {
  15%,
  40%,
  75%,
  100% {
    transform-origin: center center;
  }
  15% {
    transform: scale(1.2, 1.1);
  }
  40% {
    transform: scale(0.95, 0.95);
  }
  75% {
    transform: scale(1.05, 1);
  }
  100% {
    transform: scale(1, 1);
  }
}

